# cwcwm

./: README.md  flake.nix  meson.build
docs/: config.ld
include/cwc/: luac.h  luaclass.h  server.h  util.h
include/cwc/input/: cursor.h  keyboard.h  seat.h  tablet.h  touch.h
include/private/: luac.h
lib/impl/: border.lua  default_behavior.lua
nix/: default.nix  wlroots.nix
plugins/: dwl-ipc.c
src/: luac.c  luaclass.c  main.c  meson.build  process.c  util-vec.c
src/desktop/: xwayland.c
src/input/: cursor.c  keybinding.c  keyboard.c  manager.c  seat.c  tablet.c  touch.c
src/objects/: client.c  kbind.c  kbindmap.c  pointer.c  tablet.c
tests/: meson.build  rc.lua  vec.c
tests/luapi/: tablet.lua
